# xxw

./: .dockerignore  .env  .env.example  .env.production  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 29fb5bb84041_init_tables.py  441476cdcb12_init.py
docker/: backend-entrypoint.sh
docker/nginx/: default.conf
docs/: DESIGN.md  REQUIREMENTS.md  USER_MANUAL.md
docs/plans/: 2026-03-11-timerservice-implementation-plan.md  2026-03-12-backend-uv-docker-design.md  2026-03-12-backend-uv-docker.md  2026-03-12-compose-bundled-frontend.md  2026-03-12-docker-compose-design.md  2026-03-13-nginx-gunicorn-compose-design.md  2026-03-13-nginx-gunicorn-compose.md  2026-03-13-ui-and-runtime-refactor-design.md  2026-03-13-ui-and-runtime-refactor.md
frontend/: package-lock.json  vite.config.js
frontend/frontend/src/: router.js
frontend/src/: App.vue  router.js  style.css
frontend/src/components/: SSEClient.js
frontend/src/composables/: useSession.js
frontend/src/services/: api.js  sessionStorage.js
frontend/src/views/: Events.vue  Login.vue  Register.vue  Timers.vue  timerState.js  timerState.test.js
src/timerservice/: __init__.py  app.py  config.py  db.py  models.py  runtime.py  wsgi.py
src/timerservice/auth/: jwt.py  routes.py  service.py
src/timerservice/events/: __init__.py  routes.py
src/timerservice/scheduler/: manager.py
tests/: conftest.py  test_app_shell.py  test_auth.py  test_events.py  test_sse.py  test_timers.py
(+25 files in other folders)
